Rename package from @nx-morpheus/logs-gateway to logs-gateway
- Updated package.json name to simple 'logs-gateway'
- Updated all documentation and examples to use new package name
- Updated source file comments and error messages
- Unpublished old scoped package and published new simple name package

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@nx-morpheus/logs-gateway",
+  "name": "logs-gateway",
   "version": "1.0.0",
   "description": "Standardized logging gateway for Node.js applications",
   "main": "dist/index.js",
