--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "logs-gateway",
-  "version": "1.0.1",
+  "version": "1.1.0",
   "description": "Standardized logging gateway for Node.js applications",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
@@ -34,12 +34,12 @@
     "README.md",
     "LICENSE"
   ],
+  "dependencies": {
+    "@x-developer/unified-logger": "^1.0.15"
+  },
   "devDependencies": {
     "@types/node": "^20.0.0",
     "typescript": "^5.0.0"
-  },
-  "peerDependencies": {
-    "typescript": ">=4.0.0"
   },
   "engines": {
     "node": ">=16.0.0"
