--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "build": "tsc",
     "dev": "tsc --watch",
-    "clean": "rm -rf dist",
+    "clean": "rimraf dist",
     "prepublishOnly": "npm run clean && npm run build"
   },
   "keywords": [
@@ -39,6 +39,7 @@
   },
   "devDependencies": {
     "@types/node": "^20.0.0",
+    "rimraf": "^6.0.1",
     "typescript": "^5.0.0"
   },
   "engines": {
