--- a/package.json
+++ b/package.json
@@ -1,13 +1,14 @@
 {
   "name": "logs-gateway",
   "version": "1.2.0",
-  "description": "Standardized logging gateway for Node.js applications",
+  "description": "Standardized logging gateway for Node.js applications with PII sanitization and verbose logging",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "scripts": {
     "build": "tsc",
     "dev": "tsc --watch",
     "clean": "rimraf dist",
+    "test": "vitest",
     "prepublishOnly": "npm run clean && npm run build"
   },
   "keywords": [
@@ -17,7 +18,11 @@
     "node",
     "console",
     "file",
-    "json"
+    "json",
+    "sanitization",
+    "pii",
+    "security",
+    "privacy"
   ],
   "author": "nx-morpheus",
   "license": "MIT",
@@ -35,12 +40,30 @@
     "LICENSE"
   ],
   "dependencies": {
-    "@x-developer/unified-logger": "^1.0.15"
+    "@cdssnc/sanitize-pii": "^2.0.3",
+    "@x-developer/unified-logger": "^1.0.15",
+    "consola": "^3.4.2",
+    "fast-redact": "^3.5.0",
+    "js-yaml": "^4.1.0",
+    "nanoid": "^5.1.6",
+    "pino": "^10.1.0",
+    "pino-http": "^11.0.0",
+    "pino-pretty": "^13.1.2",
+    "rotating-file-stream": "^3.2.7",
+    "validator": "^13.15.15",
+    "winston-daily-rotate-file": "^5.0.0",
+    "xss": "^1.0.15"
   },
   "devDependencies": {
+    "@types/fast-redact": "^3.0.4",
+    "@types/js-yaml": "^4.0.9",
+    "@types/nanoid": "^2.1.0",
     "@types/node": "^20.0.0",
+    "@types/pino": "^7.0.4",
+    "@types/validator": "^13.15.3",
     "rimraf": "^6.0.1",
-    "typescript": "^5.0.0"
+    "typescript": "^5.0.0",
+    "vitest": "^4.0.3"
   },
   "engines": {
     "node": ">=16.0.0"
