feat: Add scoping, story output, and troubleshooting integration
- Add scoping with text filters (textIncludesAny, textIncludesAll, textMatches)
- Add story output powered by scopeRecord helper
- Add troubleshooting integration with nx-troubleshooting
- Export scopeRecord as generic tool for arbitrary JSON records
- Update README with comprehensive documentation
- Bump version to 1.4.0

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "logs-gateway",
-  "version": "1.3.0",
-  "description": "Standardized logging gateway for Node.js with PII sanitization, correlation trails, Shadow Logging for test/debug capture, and multi-format output (JSON/YAML/text)",
+  "version": "1.4.0",
+  "description": "Standardized logging gateway for Node.js with PII sanitization, correlation trails, Shadow Logging for test/debug capture, scoping with text filters, story output, troubleshooting integration, and multi-format output (JSON/YAML/text)",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "scripts": {
@@ -30,7 +30,11 @@
     "correlation",
     "tracing",
     "opentelemetry",
-    "trails"
+    "trails",
+    "scoping",
+    "troubleshooting",
+    "story-output",
+    "scope-record"
   ],
   "author": "nx-morpheus",
   "license": "MIT",
