--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "logs-gateway",
-  "version": "1.5.0",
+  "version": "2.0.0",
   "description": "Standardized logging gateway for Node.js with PII sanitization, correlation trails, Shadow Logging for test/debug capture, scoping with text filters, story output, troubleshooting integration, and multi-format output (JSON/YAML/text)",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
@@ -9,7 +9,8 @@
     "dev": "tsc --watch",
     "clean": "rimraf dist",
     "test": "vitest",
-    "prepublishOnly": "npm run clean && npm run build"
+    "prepublishOnly": "npm run clean && npm run build",
+    "generate-erc": "tsx scripts/generate-erc-manifest.ts"
   },
   "keywords": [
     "logging",
@@ -57,7 +58,9 @@
     "consola": "^3.4.2",
     "fast-redact": "^3.5.0",
     "js-yaml": "^4.1.0",
+    "micro-logs": "^1.0.0",
     "nanoid": "^5.1.6",
+    "nx-config2": "^3.5.0",
     "pino": "^10.1.0",
     "pino-http": "^11.0.0",
     "pino-pretty": "^13.1.2",
@@ -74,6 +77,7 @@
     "@types/pino": "^7.0.4",
     "@types/validator": "^13.15.3",
     "rimraf": "^6.0.1",
+    "tsx": "^4.7.0",
     "typescript": "^5.0.0",
     "vitest": "^4.0.3"
   },
